--- a/app/src/main/res/layout/dialog_filter_by_rating.xml
+++ b/app/src/main/res/layout/dialog_filter_by_rating.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingVertical="16dp"
-
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingVertical="16dp">
 
     <!--    <com.github.mikephil.charting.charts.PieChart-->
     <!--        android:id="@+id/dialog_filterByRating_chart"-->
     <!--        android:layout_width="match_parent"-->
     <!--        android:layout_height="match_parent"-->
     <!--        android:layout_weight="1" />-->
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,9 +23,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="8dp"
             android:text="Übersicht"
-            android:layout_marginHorizontal="16dp"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
@@ -87,11 +87,17 @@
         </FrameLayout>
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="8dp"
+        android:background="?android:attr/listDivider" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
         android:orientation="vertical">
 
 
@@ -123,6 +129,13 @@
                 android:text="Auswählen" />
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="3dp"
+            android:background="?android:attr/listDivider" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -131,15 +144,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/dialog_advancedSearch_viewed_since_edit_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:errorEnabled="true">
+                    android:layout_weight="1">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/dialog_advancedSearch_viewed_since_edit"
@@ -154,7 +166,8 @@
                     android:id="@+id/dialog_advancedSearch_viewed_since_unit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:entries="@array/dateRangeUnits" />
+                    android:background="@null"
+                    android:entries="@array/dateDurationOffsetUnits" />
 
 
             </LinearLayout>
@@ -162,14 +175,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/dialog_advancedSearch_viewed_duration_edit_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:errorEnabled="true">
+                    android:layout_weight="1">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/dialog_advancedSearch_viewed_duration_edit"
@@ -184,7 +197,8 @@
                     android:id="@+id/dialog_advancedSearch_viewed_duration_unit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:entries="@array/dateRangeUnits" />
+                    android:background="@null"
+                    android:entries="@array/dateDurationUnits" />
 
 
             </LinearLayout>
